--- a/Views/Blogs/Index.cshtml
+++ b/Views/Blogs/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<TheBlogProject.Models.Blog>
+﻿@using TheBlogProject.Services
+@inject IImageService imageService
+@model IEnumerable<TheBlogProject.Models.Blog>
 
 @{
     ViewData["Title"] = "Index";
@@ -25,14 +27,10 @@
                 @Html.DisplayNameFor(model => model.Updated)
             </th>
             <th>
+                
                 @Html.DisplayNameFor(model => model.ImageData)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ContentType)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.BlogUser)
-            </th>
+            
             <th></th>
         </tr>
     </thead>
@@ -52,14 +50,9 @@
                 @Html.DisplayFor(modelItem => item.Updated)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ImageData)
+                <img class="img-fluid" style="width:100px;" src="@imageService.DecodeImage(item.ImageData, item.ContentType)">
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ContentType)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.BlogUser.Id)
-            </td>
+            
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
