--- a/Views/Posts/Edit.cshtml
+++ b/Views/Posts/Edit.cshtml
@@ -45,7 +45,7 @@
             
             <div class="form-group">
                 <label asp-for="Image" class="control-label"></label>
-                <input type="file" asp-for="Image" class="form-control" />
+                <input type="file" name="newImage" class="form-control" />
                 <span asp-validation-for="Image" class="text-danger"></span>
             </div>
            
@@ -61,5 +61,13 @@
 </div>
 
 @section Scripts {
+
+     <script>
+        //Default font size but not for placeholder...
+        $('#Content').summernote({
+            placeholder: "post Body"
+        });
+    </script>
+
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
