--- a/Views/Blogs/Create.cshtml
+++ b/Views/Blogs/Create.cshtml
@@ -9,7 +9,7 @@
 <h4>Blog</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 mx-2">
         <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             
@@ -25,19 +25,19 @@
             </div>
            
             <div class="form-group">
-                <label asp-for="ImageData" class="control-label"></label>
-                <input type="file" asp-for="Image" class="form-control" />
-                <span asp-validation-for="ImageData" class="text-danger"></span>
+                <label asp-for="Image" class="control-label"></label>
+                <input type="file" asp-for="Image" class="form-control" accept=".jpg,.png,.gif,.jpeg" />
+                <span asp-validation-for="Image" class="text-danger"></span>
             </div>
             
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary"/>
+                <input type="submit" value="Create" class="btn btn-primary mt-2"/>
             </div>
         </form>
     </div>
 </div>
 
-<div>
+<div class="mx-2">
     <a asp-action="Index">Back to List</a>
 </div>
 
