--- a/Views/Posts/Index.cshtml
+++ b/Views/Posts/Index.cshtml
@@ -1,4 +1,8 @@
-﻿@model IEnumerable<TheBlogProject.Models.Post>
+﻿@using TheBlogProject.Services
+@using TheBlogProject.Models
+
+@inject IImageService imageService
+@model IEnumerable<Post>
 
 @{
     ViewData["Title"] = "Index";
@@ -12,6 +16,10 @@
 <table class="table">
     <thead>
         <tr>
+             <th>
+                @Html.DisplayNameFor(model => model.Image)
+            </th>
+
             <th>
                 @Html.DisplayNameFor(model => model.Title)
             </th>
@@ -19,13 +27,7 @@
                 @Html.DisplayNameFor(model => model.Abstract)
             </th>
             
-            <th>
-                @Html.DisplayNameFor(model => model.Created)
-            </th>
             
-            <th>
-                @Html.DisplayNameFor(model => model.ReadyStatus)
-            </th>
            
             
             <th></th>
@@ -34,6 +36,10 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+             <td>
+                <img class="img-fluid" width="300" src="@imageService.DecodeImage(item.ImageData, item.ContentType)">
+            </td>
+
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
@@ -41,13 +47,7 @@
                 @Html.DisplayFor(modelItem => item.Abstract)
             </td>
             
-            <td>
-                @Html.DisplayFor(modelItem => item.Created)
-            </td>
             
-            <td>
-                @Html.DisplayFor(modelItem => item.ReadyStatus)
-            </td>
             
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
