--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -3454,11 +3454,7 @@ textarea.form-control-lg {
   border-radius: 0;
 }
 
-.btn-sm, .btn-group-sm > .btn {
-  padding: 0.25rem 0.5rem;
-  font-size: 0.875rem;
-  border-radius: 0;
-}
+
 
 .fade {
   transition: opacity 0.15s linear;
@@ -3851,10 +3847,6 @@ textarea.form-control-lg {
   margin-right: 0;
 }
 
-.btn-sm + .dropdown-toggle-split, .btn-group-sm > .btn + .dropdown-toggle-split {
-  padding-right: 0.375rem;
-  padding-left: 0.375rem;
-}
 
 .btn-lg + .dropdown-toggle-split, .btn-group-lg > .btn + .dropdown-toggle-split {
   padding-right: 0.75rem;
@@ -11245,4 +11237,9 @@ header.masthead .site-heading .h1 {
   .post-preview > a > .post-title {
     font-size: 2.25rem;
   }
+}
+
+.button.btn-sm, a.btn-sm {
+    line-height: .5;
+    border-radius: 10px;
 }
