--- a/Views/Posts/Create.cshtml
+++ b/Views/Posts/Create.cshtml
@@ -63,10 +63,10 @@
                         </div>
                         <div class="row">
                             <div class="col pt-2 d-grid gap-2 col-6 mx-auto">
-                                <button name="Add" style="width:225px;" type="button" class="btn btn-dark btn-sm">ADD</button>
+                                <button onclick="AddTag()" name="Add" style="width:225px;" type="button" class="btn btn-dark btn-sm">ADD</button>
                             </div>
                             <div class="col pt-2 d-grid gap-2 col-6 mx-auto">
-                                <button name="Delete" style="width:225px;" type="button" class="btn btn-dark btn-sm">DELETE</button>
+                                <button onclick="DeleteTag()" name="Delete" style="width:225px;" type="button" class="btn btn-dark btn-sm">DELETE</button>
                             </div>
                         </div>
                     </div>
@@ -86,6 +86,8 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+
+<script src="~/js/Custom.js"></script>
 
 @section Scripts{
 
