--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -11243,3 +11243,7 @@ header.masthead .site-heading .h1 {
     line-height: .5;
     border-radius: 10px;
 }
+
+option {
+    font-weight: bolder;
+}
