--- a/Views/Posts/Create.cshtml
+++ b/Views/Posts/Create.cshtml
@@ -87,15 +87,19 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-<script src="~/js/Custom.js"></script>
 
 @section Scripts{
 
     <script>
+
+        let tagValues = '@ViewData["TagValues"]';
         //Default font size but not for placeholder...
         $('#Content').summernote({
             placeholder: "post Body"
         });
     </script>
+
+    <script src="~/js/Custom.js"></script>
+
 
 }
