--- a/Views/Posts/Edit.cshtml
+++ b/Views/Posts/Edit.cshtml
@@ -10,7 +10,7 @@
 <h4>Post</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-8">
         <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
@@ -36,17 +36,44 @@
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
             
-            
             <div class="form-group">
-                <label asp-for="ReadyStatus" class="control-label"></label>
-                <select asp-for="ReadyStatus" class="form-control" asp-items="Html.GetEnumSelectList<ReadyStatus>()"></select>
-                <span asp-validation-for="ReadyStatus" class="text-danger"></span>
+                <div class="row">
+                    <div class="col">
+                        <label class="control-label">Manage Tags</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="row">
+                            <div class="col">
+                                <input type="text" class="form-control" id="tagEntry" />
+                            </div>
+                        </div>
+                        <div class="row pb-2">
+                            <div class="col pt-2 d-grid gap-2 col-6 mx-auto">
+                                <button onclick="AddTag()" name="Add" style="width:225px;" type="button" class="btn btn-dark btn-sm">ADD</button>
+                            </div>
+                            <div class="col pt-2 d-grid gap-2 col-6 mx-auto">
+                                <button onclick="DeleteTag()" name="Delete" style="width:225px;" type="button" class="btn btn-dark btn-sm">DELETE</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <select class="btn-block" style="width:500px;" name="TagValues" id="TagList" multiple></select>
+                    </div>
+                </div>
             </div>
-            
+
             <div class="form-group">
                 <label asp-for="Image" class="control-label"></label>
                 <input type="file" name="newImage" class="form-control" />
                 <span asp-validation-for="Image" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="ReadyStatus" class="control-label"></label>
+                <select asp-for="ReadyStatus" class="form-control" asp-items="Html.GetEnumSelectList<ReadyStatus>()"></select>
+                <span asp-validation-for="ReadyStatus" class="text-danger"></span>
             </div>
            
             <div class="form-group">
@@ -63,11 +90,15 @@
 @section Scripts {
 
      <script>
+
+         let tagValues = '@ViewData["TagValues"]';
+
         //Default font size but not for placeholder...
         $('#Content').summernote({
             placeholder: "post Body"
         });
     </script>
 
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="~/js/Custom.js"></script>
+
 }
