--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -104,7 +104,8 @@
         <!-- Summernote JS -->
         @*<script src="~/js/summernote-lite.js"></script>*@
         <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.js"></script>
-
+        <!--Sweet Alert 2 -->
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         
         
         @await RenderSectionAsync("Scripts", required: false)
