--- a/Views/Blogs/Index.cshtml
+++ b/Views/Blogs/Index.cshtml
@@ -8,9 +8,14 @@
 
 <h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+@if (User.IsInRole("Administrator, Moderator"))
+{
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
+}
+
+
 <table class="table">
     <thead>
         <tr>
