--- a/Views/Posts/Create.cshtml
+++ b/Views/Posts/Create.cshtml
@@ -58,7 +58,7 @@
                     <div class="col">
                         <div class="row">
                             <div class="col">
-                                <input type="text" class="form-control" id="tagEntry" />
+                                <input type="text" class="form-control" id="TagEntry" />
                             </div>
                         </div>
                         <div class="row">
@@ -71,7 +71,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <select class="btn-block" style="width:500px;" name="TagValues" id="TagList" multiple></select>
+                        <select class="btn-block" style="width:500px;" name="tagValues" id="TagList" multiple></select>
                     </div>
                 </div>
             </div>
@@ -101,5 +101,5 @@
 
     <script src="~/js/Custom.js"></script>
 
-
+    
 }
