--- a/Views/Posts/Details.cshtml
+++ b/Views/Posts/Details.cshtml
@@ -29,9 +29,9 @@
             <div class="col text-center">
                 @foreach(var tag in Model.Tags)
             {
-                <a class="btn btn-warning btn-sm btn-bbtn-outline-dark" asp-action="TagIndex" asp-route="@tag.Text.ToLower()">#@tag.Text</a>
+                <a class="btn btn-warning btn-sm btn-outline-dark" asp-action="TagIndex" asp-route-tag="@tag.Text.ToLower()">#@tag.Text</a>
             }
-        </div>
+            </div>
         </div>
     </article>
 
