--- a/Views/Posts/Edit.cshtml
+++ b/Views/Posts/Edit.cshtml
@@ -46,7 +46,7 @@
                     <div class="col">
                         <div class="row">
                             <div class="col">
-                                <input type="text" class="form-control" id="tagEntry" />
+                                <input type="text" class="form-control" id="TagEntry" />
                             </div>
                         </div>
                         <div class="row pb-2">
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <select class="btn-block" style="width:500px;" name="TagValues" id="TagList" multiple></select>
+                        <select class="btn-block" style="width:500px;" name="tagValues" id="TagList" multiple></select>
                     </div>
                 </div>
             </div>
@@ -95,7 +95,7 @@
 
         //Default font size but not for placeholder...
         $('#Content').summernote({
-            placeholder: "post Body"
+            placeholder: "Post Body"
         });
     </script>
 
