--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -121,6 +121,10 @@
         <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.js"></script>
         <!--Sweet Alert 2 -->
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	    <script src="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.1.2/js/star-rating.min.js" type="text/javascript"></script>
         
         
         @await RenderSectionAsync("Scripts", required: false)
