--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -55,8 +55,8 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
-                            <h1>Clean Blog</h1>
-                            <span class="subheading">A Blog Theme by Start Bootstrap</span>
+                            <h1>Polyanitsa</h1>
+                            <span class="subheading">The world has never seen anything like this before</span>
 
                             <form asp-action="SearchIndex" asp-controller="Posts">
                                 <div class="input-group mt-5">
