--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -11252,3 +11252,140 @@ div.swal2-container.swal2-center.swal2-backdrop-show > div {
     outline: 4px solid black;
     border: 2px solid #198754;
 }
+
+.nav {
+    display: inline-block;
+}
+
+#navbarResponsive > ul:nth-child(2) > form > button {
+    line-height: 1.5;
+    font-family: 'Open Sans', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+    list-style: none;
+    box-sizing: border-box;
+    background-color: turquoise;
+    transition: all .2s;
+    display: block;
+    text-decoration: none;
+    font-size: 12px;
+    font-weight: 800;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    padding: 10px 20px;
+    color: rgba(255,255,255,.8);
+}
+
+.nav-identity {
+    padding-top: 18px !important;
+}
+
+.media-border {
+    border: 2px solid black;
+}
+
+.bg-cf {
+    background-color: rgb(255, 153, 59, .35);
+}
+
+/*app wide font*/
+
+header.masthead .page-heading,
+header.masthead .post-heading,
+header.masthead .site-heading {
+    padding: 100px 0 100px 0;
+}
+
+.noline {
+    text-decoration: none;
+}
+
+.btn-tag {
+    margin-top: 10px;
+}
+
+.bntWide, .btn-tag {
+    width: 100%;
+}
+
+button.btn-sm, a.btn-sm {
+    line-height: .5;
+    
+}
+
+.btn-dark:hover {
+    border: 4px solid #25d456;
+}
+
+.btn-warning {
+    color: #212121;
+    background-color: #1976b5;
+    border-color: #6c757d;
+}
+
+    .btn-warning:hover {
+        color: white;
+        background-color: #1976b5;
+        outline: 4px solid #000;
+    }
+
+.card-hr {
+    color: #000;
+    background-color: #000;
+    height: 3px;
+}
+
+.card-text {
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+.card-title {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+.card-img, .card-img-top, .card-img-bottom {
+    height: 200px;
+}
+
+.page-item.active .page-link {
+    background-color: #212121;
+    border-color: black;
+}
+
+.page-link {
+    color: #212121;
+}
+
+div.swal12-container.swal12-center.swal12-backdrop-show > div {
+    outline: 4px solid black;
+    border: 2px solid #ff993b;
+}
+
+.cftooltip * {
+    opacity: 1.0 !important;
+}
+
+#TagList {
+    width: 100%;
+    font-weight: 600;
+}
+
+.tagView {
+    max-height: 300px;
+    overflow-y: scroll;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: #212121;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    box-shadow: #212121;
+    border-radius: 10px;
+}
+
