--- a/Views/Posts/BlogPostIndex.cshtml
+++ b/Views/Posts/BlogPostIndex.cshtml
@@ -1,58 +1,66 @@
-﻿@using TheBlogProject.Models
-@using TheBlogProject.Services
-@using TheBlogProject.Enums
-@using Microsoft.AspNetCore.Identity;
+﻿@using TheBlogProject.Services
+@using TheBlogProject.Models
 @using X.PagedList
 @using X.PagedList.Mvc.Core
 @using X.PagedList.Web.Common
 
-
-
-@inject UserManager<BlogUser> userManager
-@inject IImageService _imageService
-
+@inject IImageService imageService
 @model IPagedList<Post>
 
-<div class="row">
-    @foreach (var post in Model)
-    {
-        //Is the logged in user the Author of this post??
-        var isAuthor = false;
-        if (User.Identity.IsAuthenticated)
-        {
-            isAuthor = (post.BlogUserId == userManager.GetUserId(User));
-        }
+@{
+    ViewData["Title"] = "Index";
+}
 
-        <div class="col-sm-2 col-lg-4">
-            <div class="card border-dark">
-                <div class="card-body text-center">
-                    <div class="bg-warning">
-                        <hr class="card-hr" />
-                        <h5 class="card-title">@post.Title</h5>
-                        <hr class="card-hr" />
-                    </div>
-                    <div>
-                        <p class="card-text">@post.Abstract</p>
-                    </div>
+<h1>Index</h1>
 
-                    <br />
-                    <div class="text-center">
-                        <a class="btn btn-dark btn-sm btn-block mb-1" asp-action="Details" asp-controller="Posts" asp-route-slug="@post.Slug">Read More</a>
-                    </div>
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+             <th>
+                Image
+            </th>
 
-                    @if (User.IsInRole(BlogRole.Administrator.ToString()) || isAuthor)
-                    {
-                        <div class="text-center">
-                            <a class="btn btn-dark btn-sm btn-block border-dark" asp-action="Edit" asp-controller="Posts" asp-route-id="@post.Id">Edit Post</a>
-                        </div>
-                    }
-                </div>
-                <img class="card-img-bottom" src="@_imageService.DecodeImage(post.ImageData,  post.ContentType)" />
-            </div>
+            <th>
+                Title
+            </th>
+            <th>
+                Abstract
+            </th>
+            
+            
+           
+            
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+             <td>
+                <img class="img-fluid" width="300" src="@imageService.DecodeImage(item.ImageData, item.ContentType)">
+            </td>
 
-        </div>
-    }
-</div>
+            <td>
+                @Html.DisplayFor(modelItem => item.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Abstract)
+            </td>
+            
+            
+            
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-slug="@item.Slug">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
 
 <hr />
 
@@ -61,13 +69,18 @@
         Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
     </div>
 </div>
+
 <div class="row">
     <div class="col">
-        @Html.PagedListPager(Model, page => Url.Action("BlogPostIndex", new { id = Model.FirstOrDefault().BlogId, page = page }),
-            new PagedListRenderOptions
-            {
-                LiElementClasses = new string[] { "page-item" },
-                PageClasses = new string[] { "page-link" }
-            })
+        @Html.PagedListPager(Model, page => Url.Action("BlogPostIndex", new { id = Model.FirstOrDefault().BlogId, page = page}),
+        new PagedListRenderOptions
+        {
+            LiElementClasses = new string[] { "page-item"},
+            PageClasses = new string[] { "page-link"}
+        } )
+       
+            
     </div>
 </div>
+
+
