--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -11314,26 +11314,25 @@ button.btn-sm, a.btn-sm {
 }
 
 .btn-dark:hover {
-    border: 4px solid #0085A1;
-    color: #0085A1;
+    border: 4px solid #25d456;
 }
 
 .btn-warning {
     color: #212121;
     background-color: #1976b5;
-    border-color: #0085A1
+    border-color: #6c757d;
 }
 
     .btn-warning:hover {
         color: white;
-        background-color: #0085A1;
+        background-color: #1976b5;
         outline: 4px solid #000;
     }
 
 .card-hr {
-    color: #0085A1;
-    background-color: #0085A1;
-    height: 2px;
+    color: #000;
+    background-color: #000;
+    height: 3px;
 }
 
 .card-text {
@@ -11351,11 +11350,11 @@ button.btn-sm, a.btn-sm {
 }
 
 .card-img, .card-img-top, .card-img-bottom {
-    height: 150px;
+    height: 200px;
 }
 
 .page-item.active .page-link {
-    background-color: #0085A1;
+    background-color: #212121;
     border-color: black;
 }
 
@@ -11365,7 +11364,7 @@ button.btn-sm, a.btn-sm {
 
 div.swal12-container.swal12-center.swal12-backdrop-show > div {
     outline: 4px solid black;
-    border: 2px solid #0085A1;
+    border: 2px solid #ff993b;
 }
 
 .cftooltip * {
