--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -54,12 +54,12 @@
 
 @section Scripts{
 
-    <script>
+   @* <script>
         //Default font size but not for placeholder...
         $('#Message').summernote({
             placeholder: "Message"
         });
-    </script>
+    </script>*@
 
 
 
