--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,9 +9,9 @@
         
         <title>@ViewData["Title"] - The Blog Project</title>
 
-        <!-- <link rel="icon" type="image/x-icon" href="/favicon.ico" /> -->
+        <link rel="icon" type="image/x-icon" href="/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
-        <!-- <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script> -->
+        <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
@@ -118,7 +118,7 @@
         <script src="~/js/scripts.js"></script>
         <!-- Summernote JS -->
         @*<script src="~/js/summernote-lite.js"></script>*@
-        @*<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.js"></script>*@
+        <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.js"></script>
         <!--Sweet Alert 2 -->
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
